# archlink

./: .gitignore  Cargo.toml  PKGBUILD  README.md
src/: main.rs
