[package]
name = "archlink"
version = "0.1.1"
edition = "2024"
description = "ArchLink helps Arch Linux users to find the right packages to install"
license = "MIT"
repository = "https://github.com/amirhosseinghanipour/archlink"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
strsim = "0.11"
toml = "0.8"
urlencoding = "2.1"
colored = "3.0.0"
serde_json = "1.0.140"
